--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  dio:
+  equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
+  flutter_spinkit: ^5.0.0
+  http: ^0.13.3
   sqflite:
   path_provider:  
 
