UI refinement in listing screen yet to be done somemore along with local storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/no_news.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -83,6 +83,7 @@ flutter:
     - family: Roboto Slab
       fonts:
         - asset: fonts/RobotoSlab-Bold.ttf
+        - asset: fonts/RobotoSlab-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
