--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   flutter_bloc: ^7.0.0
   flutter_spinkit: ^5.0.0
   http: ^0.13.3
+  intl: ^0.17.0
   sqflite:
   path_provider:  
 
