--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   flutter_spinkit: ^5.0.0
   http: ^0.13.3
   intl: ^0.17.0
+  connectivity_plus: ^2.3.0
+  shared_preferences: ^2.0.15
   sqflite:
   path_provider:  
 
